First attempt at "adoption agency algorithm". Not working yet.

--- a/test/sample.html
+++ b/test/sample.html
@@ -77,7 +77,10 @@
   <br>
   <p>Foo
   <p>Bar
-  <!-- <p>Overlapping <i>nesting <b>of </i>tags</b></p> -->
+  <!-- Misnested 1 -->
+  <p>1<b>2<i>3</b>4</i>5</p>
+  <!-- Misnested 2 -->
+  <b>1<p>2</b>3</p>
   <table>
     <caption>A Table
     <th>foo
