Improved handling of misnested tags, but still not working yet.

--- a/test/sample.html
+++ b/test/sample.html
@@ -78,7 +78,7 @@
   <p>Foo
   <p>Bar
   <!-- Misnested 1 -->
-  <p>1<b>2<i>3</b>4</i>5</p>
+  <p>1<b>2<i class="foo">3</b>4</i>5</p>
   <!-- Misnested 2 -->
   <b>1<p>2</b>3</p>
   <table>
