--- a/test/sample.html
+++ b/test/sample.html
@@ -52,6 +52,14 @@
   <p>One</p>
   <p>Two
   <p>Three</p>
+  <![CDATA[First CDATA example]]>
+  <math>
+    <![CDATA[Second CDATA example]]>
+  </math>
+  <br/>
+  <svg width=200 height=20>
+    <text x=0 y=15><![CDATA[Third CDATA example]]></text>
+  </svg>
   <? an ignored processing instruction, followed by an unmatched tag >
   </td>
   <! -- not a comment >
@@ -100,8 +108,10 @@ nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
 Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
 fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
 culpa qui officia deserunt mollit anim id est laborum.</textarea>
-<!-- Forced errors -->
-</ >
-</span nonspace >
+<!-- Tricky text and forced errors  -->
+  </ >
+  <h5>2 < 3, & that's true</h5>
+  </span nonspace >
+  <span class="error" / >Bazinga!</span>
 </body>
 </html>
