Update packages. Modify whitespace handling.

--- a/test/sample.html
+++ b/test/sample.html
@@ -87,9 +87,9 @@
   <br>
   <p>Foo
   <p>Bar</p>
-  <!-- Misnested 1 -->
+  <!-- Misnested 1, https://www.w3.org/TR/2011/WD-html5-20110525/the-end.html#misnested-tags:-b-i-b-i -->
   <p>1<b>2<i class="foo">3</b>4</i>5</p>
-  <!-- Misnested 2 -->
+  <!-- Misnested 2, https://www.w3.org/TR/2011/WD-html5-20110525/the-end.html#misnested-tags:-b-p-b-p -->
   <b class="bar">1<p>2</b>3</p>
   <table>
     <caption>A Table
