Finished up chunk handling.

--- a/test/sample.html
+++ b/test/sample.html
@@ -51,7 +51,7 @@
 <body>
   <p>One</p>
   <p>Two
-  <p>Three</p>
+  <p>Three 😀😃😄😁😆😅😂🤣😊😇🙂🙃😉</p>
   <p><![CDATA[First CDATA example &amp;]]></p>
   <math>
     <annotation><![CDATA[Second CDATA example &amp; entities ignored]]></annotation>
