Simplify handling of leading and trailing space.

--- a/test/sample.html
+++ b/test/sample.html
@@ -50,7 +50,7 @@
   </script>
 </head>
 <body>
-  <p>One</p>
+  <p>One</p  >
   <p>Two
   <p>Three 😀😃😄😁😆😅😂🤣😊😇🙂🙃😉</p>
   <p><![CDATA[First CDATA example &amp;]]></p>
@@ -66,10 +66,11 @@
   <th>This doesn't belong here</th>
   <! -- not a comment >
   <div class="backdrop" class="duplicate-attribute-ignored">
-    <div class='outer-wrapper'>
+    <div class='outer-wrapper'  >
       <div class="sizer">&nbsp;</div>
       <!-- Very sloppy attribute values -->
-      <input type=hidden foo==bar/>
+      <input type=hidden
+             foo==bar/>
       <div class="inner-wrapper" foo==bar/baz>
         <div class="content">
           <ul>
