Fix a small bug in handling whitespace around `=` between an attribute and its value. Add option for special whitespace formatting.

--- a/test/sample.html
+++ b/test/sample.html
@@ -53,7 +53,7 @@
   <p>One</p  >
   <p>Two
   <p>Three 😀😃😄😁😆😅😂🤣😊😇🙂🙃😉</p>
-  <p><![CDATA[First CDATA example &amp;]]></p>
+  <p><![CDATA[First CDATA example -- treated as generic declaration]]></p>
   <math>
     <annotation><![CDATA[Second CDATA example &amp; entities ignored]]></annotation>
   </math>
@@ -72,7 +72,7 @@
       <input type=hidden
              foo==bar/>
       <div class="inner-wrapper" foo==bar/baz>
-        <div class="content">
+        <div class = "content">
           <ul>
             <li>One</li>
             <li>thing
