Created a script for fixing the clipboard contents when HTML is stylized with the `showWhitespace` option, so that the original whitespace gets copied, not the characters used to visually represent the space. Added showing incomplete end tags with error styling.

--- a/test/sample.html
+++ b/test/sample.html
@@ -71,7 +71,7 @@
       <!-- Very sloppy attribute values -->
       <input type=hidden
              foo==bar/>
-      <div class="inner-wrapper" foo==bar/baz>
+      <div class="inner-wrapper" foo==bar/baz&>
         <div class = "content">
           <ul>
             <li>One</li>
@@ -79,7 +79,7 @@
             <li>after</li>
             <li>another
             <li>after</li>
-            <li>another</li>
+            <li>another ·↵·</li>
           </ul>
         </div>
       </div>
