--- a/test/sample.html
+++ b/test/sample.html
@@ -36,6 +36,7 @@
       width: fit-content;
     }
 
+    /* Ignore as &lt; attribute */
     .content {
       margin: 1em;
       min-width: 500px;
@@ -65,7 +66,7 @@
   </td>
   <th>This doesn't belong here</th>
   <! -- not a comment >
-  <div class="backdrop" class="duplicate-attribute-ignored">
+  <div class="backdrop" class="duplicate-attribute-&quot;ignored">
     <div class='outer-wrapper'  >
       <div class="sizer">&nbsp;</div>
       <!-- Very sloppy attribute values -->
