Much improved entity recognition, with warnings and errors for questionable and bad entities. Add HTML output types.

--- a/test/sample.html
+++ b/test/sample.html
@@ -65,6 +65,8 @@
   <? an ignored processing instruction, followed by an unmatched tag >
   </td>
   <th>This doesn't belong here</th>
+  <p>Good/bad entities: &ampruns together &lt &gt. &#77,&#88; &aacute-&eacute;</p>
+  <p test="&ampnosemi">_&#XBD;&#xBE;&#x3ah; &#36a; &0; &foo; &#9999999; &copy; &</p>
   <! -- not a comment >
   <div class="backdrop" class="duplicate-attribute-&quot;ignored">
     <div class='outer-wrapper'  >
