--- a/test/sample.html
+++ b/test/sample.html
@@ -36,7 +36,7 @@
       width: fit-content;
     }
 
-    /* Ignore as &lt; attribute */
+    /* Ignore &lt; as attribute */
     .content {
       margin: 1em;
       min-width: 500px;
@@ -68,7 +68,8 @@
   <p>Good/bad entities: &ampruns together &lt &gt. &#77,&#88; &aacute-&eacute; &#xD907;</p>
   <p test="&ampnosemi">_&#XBD;&#xBE;&#x3ah; &#36a; &0; &foo; &#9999999; &copy; &</p>
   <! -- not a comment >
-  <!-- Valid and invalid characters: 	              -->
+  <span">Non-HTML spaces and invalid characters:</span>
+  <pre style="display: inline-block">	              </pre>
   <div class="backdrop" class="duplicate-attribute-&quot;ignored">
     <div class='outer-wrapper'  >
       <div class="sizer">&nbsp;</div>
