--- a/test/sample.html
+++ b/test/sample.html
@@ -68,7 +68,8 @@
   <p>Good/bad entities: &ampruns together &lt &gt. &#77,&#88; &aacute-&eacute; &#xD907;</p>
   <p test="&ampnosemi">_&#XBD;&#xBE;&#x3ah; &#36a; &0; &foo; &#9999999; &copy; &</p>
   <! -- not a comment >
-  <span">Non-HTML spaces and invalid characters:</span>
+  <code" g"`=h Non-HTML spaces and invalid characters:</code>
+  <span>Non-HTML spaces and invalid characters:</span>
   <pre style="display: inline-block">	              </pre>
   <div class="backdrop" class="duplicate-attribute-&quot;ignored">
     <div class='outer-wrapper'  >
