--- a/test/sample.html
+++ b/test/sample.html
@@ -66,7 +66,7 @@
   </td>
   <th>This doesn't belong here</th>
   <p>Good/bad entities: &ampruns together &lt &gt. &#77,&#88; &aacute-&eacute; &#xD907;</p>
-  <p test="&ampnosemi">_&#XBD;&#xBE;&#x3ah; &#36a; &0; &foo; &#9999999; &copy; &</p>
+  <p test="&ampnosemi">_&#XBD;&#xBE;&#x3ah; &#36a; &0; &foo; &#9999999; &#9999999 &copy; &</p>
   <! -- not a comment >
   <code" g"`=h Non-HTML spaces and invalid characters:</code>
   <span>Non-HTML spaces and invalid characters:</span>
