--- a/test/sample.html
+++ b/test/sample.html
@@ -79,7 +79,7 @@
              foo==bar/>
       <div class="inner-wrapper" foo==bar/baz&>
         <div class = "content">
-          <ul>
+          <ul id=list>
             <li>One</li>
             <li>thing
             <li>after</li>
