--- a/test/sample.html
+++ b/test/sample.html
@@ -99,6 +99,7 @@
   <p>1<b>2<i class="foo">3</b>4</i>5</p>
   <!-- Misnested 2, https://www.w3.org/TR/2011/WD-html5-20110525/the-end.html#misnested-tags:-b-p-b-p -->
   <b class="bar">1<p>2</b>3</p>
+  <p id='inner-test'>innerHTML <em>test</em></p>
   <table>
     <caption>A Table
     <th>foo
@@ -116,7 +117,7 @@ incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
 nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
 Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
 fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-culpa qui officia deserunt mollit anim id est laborum.</textarea>
+culpa qui officia deserunt mollit anim id est laborum. <text</textarea>
 <!-- Tricky text and forced errors  -->
   </ >
   <h5>2 < 3, 7 > 6, & that's true</h5>
