Fix singleton parsing issue. More work on HTML formatting.

--- a/test/sample.html
+++ b/test/sample.html
@@ -59,7 +59,7 @@
     <annotation><![CDATA[Second CDATA example &amp; entities ignored]]></annotation>
   </math>
   <br/>
-  <svg width=300 height=20>
+  <svg width="300" height="20">
     <text x=0 y=15># <![CDATA[Third CDATA example]]> #</text>
   </svg>
   <? an ignored processing instruction, followed by an unmatched tag >
