Improve reformatting logic by recognizing blocks of inline content. Add more formatting options and tab size option. Detect type of EOL in use.

--- a/test/sample.html
+++ b/test/sample.html
@@ -82,8 +82,8 @@
           <ul id=list>
             <li>One</li>
             <li>thing
-            <li>after</li>
-            <li>another
+            <li>after</li
+            ><li>another
             <li>after</li>
             <li>another ·↵·</li>
           </ul>
