Optionally change how '</' is handled in running text when not followed by a tag name. Add quoting and attribute spacing options.

--- a/test/sample.html
+++ b/test/sample.html
@@ -75,8 +75,8 @@
     <div class='outer-wrapper'  >
       <div class="sizer">&nbsp;</div>
       <!-- Very sloppy attribute values -->
-      <input type=hidden a=b	c=d
-             foo==bar/>
+      <input type=hidden  a=b	c=d
+         disabled foo==bar/>
       <div class="inner-wrapper" foo==bar/baz&>
         <div class = "content">
           <ul id=list>
