Fix bug with loosing leading space when block text tag in left unterminated. Add corresponding unit test. Modify handleFullTag() method to be slightly faster. Fix stylizer bug with unterminated tags.

--- a/test/sample.html
+++ b/test/sample.html
@@ -78,7 +78,7 @@
       <input type=hidden  a=b	c=d
          disabled foo==bar/>
       <div class="inner-wrapper" foo==bar/baz&>
-        <div class = "content">
+        <div class = "content" title="a>b">
           <ul id=list>
             <li>One</li>
             <li>thing
