--- a/test/sample.html
+++ b/test/sample.html
@@ -65,7 +65,7 @@
   <? an ignored processing instruction, followed by an unmatched tag >
   </td>
   <th>This doesn't belong here</th>
-  <p>Good/bad entities: &ampruns together &lt &gt. &#77,&#88; &aacute-&eacute; &#xD907;</p>
+  <p>Good/<i>bad</i> entities: &ampruns together &lt &gt. &#77,&#88; &aacute-&eacute; &#xD907;</p>
   <p test="&ampnosemi">_&#XBD;&#xBE;&#x3ah; &#36a; &0; &foo; &#9999999; &#9999999 &copy; &</p>
   <! -- not a comment >
   <code" g"`=h Non-HTML spaces and invalid characters:</code></code">
