Add ability to preserve original newlines, up to a specified number of allowable blank lines. Update packages.

--- a/test/sample.html
+++ b/test/sample.html
@@ -74,6 +74,7 @@
   <! -- not a comment >
   <code" g"`=h Non-HTML spaces and invalid characters:</code></code">
   <span>Non-HTML spaces and invalid characters:</span>
+  <span>Another span</span>
   <pre style="display: inline-block">		              </pre>
   <div class="backdrop" class="duplicate-attribute-&quot;ignored">
     <div class='outer-wrapper'  >
